--- a/index.html
+++ b/index.html
@@ -807,9 +807,9 @@
             </div>
             
             <div class="testimonial-card animate__animated animate__fadeInUp" style="animation-delay: 0.2s">
-                <img src="https://i.ibb.co/FFMDTQn/Farmer-3.jpg" alt="Anjali Deshmukh" class="testimonial-avatar">
+                <img src="https://i.ibb.co/FFMDTQn/Farmer-3.jpg" alt="Ramesh Deshmukh" class="testimonial-avatar">
                 <p class="testimonial-text">"Root Connect transformed my soil quality in just one season. Now my plants are healthier and more resistant to diseases."</p>
-                <p class="testimonial-author">Anjali Deshmukh</p>
+                <p class="testimonial-author">Ramesh Deshmukh</p>
                 <p class="testimonial-location">Jalna, Maharashtra</p>
             </div>
             
